@startuml
class CoinsReport {
}
class CodesController {
}
class CoinsReportStates {
}
interface ICodeService {
}
interface ICoinsReportByStateRepository {
}
class CodeService {
}
interface ICoinsRepository {
}
interface ICoinsReportRepository {
}
class VoteService {
}
interface ICodesRepository {
}
interface IMatchRepository {
}
class CoinsController {
}
class CoinsService {
}
interface ICoinsService {
}
class VoteController {
}
interface IVoteService {
}
interface IClientPartyRepository {
}
class MatchesController {
}
interface IVotingRepository {
}
interface ISongRepository {
}
interface IVoteRepository {
}


JpaRepository <|-- ICoinsReportByStateRepository
ICodeService <|.. CodeService
JpaRepository <|-- ICoinsRepository
JpaRepository <|-- ICoinsReportRepository
IVoteService <|.. VoteService
JpaRepository <|-- ICodesRepository
JpaRepository <|-- IMatchRepository
ICoinsService <|.. CoinsService
JpaRepository <|-- IClientPartyRepository
JpaRepository <|-- IVotingRepository
JpaRepository <|-- ISongRepository
JpaRepository <|-- IVoteRepository
@enduml